tdf#149940 Fix vlookup result with OpenCL

This patch fixes the vlookup result in sorted order using OpenCl.
The issue was that the loop unrolling would cause the loop to exit early. This has been fixed to only happen in unsorted mode.

Change-Id: I7aba7b301c87061bc33128c8930ef3c55dc3c386
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162363
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Noel Grandin <noel.grandin@collabora.co.uk>