sc/qa/unit/opencl-test-2.cxx
@@ -1844,6 +1844,33 @@ CPPUNIT_TEST_FIXTURE(ScOpenCLTest2, testStatisticalFormulaStDevPA1)
     }
 }
 
+CPPUNIT_TEST_FIXTURE(ScOpenCLTest2, testTdf149940_VLookup)
+{
+    initTestEnv(u"ods/tdf149940.ods");
+    ScDocument* pDoc = getScDoc2();
+    ScDocument* pDocRes = getScDoc();
+    pDoc->CalcAll();
+
+    for (SCROW i = 4; i <= 12; ++i)
+    {
+        double fLibre = pDoc->GetValue(ScAddress(1,i,1));
+        double fExcel = pDocRes->GetValue(ScAddress(1,i,1));
+        CPPUNIT_ASSERT_DOUBLES_EQUAL(fExcel, fLibre, fabs(0.00001));
+    }
+    for (SCROW i = 4; i <= 12; ++i)
+    {
+        double fLibre = pDoc->GetValue(ScAddress(2,i,1));
+        double fExcel = pDocRes->GetValue(ScAddress(2,i,1));
+        CPPUNIT_ASSERT_DOUBLES_EQUAL(fExcel, fLibre, fabs(0.00001));
+    }
+    for (SCROW i = 4; i <= 12; ++i)
+    {
+        double fLibre = pDoc->GetValue(ScAddress(3,i,1));
+        double fExcel = pDocRes->GetValue(ScAddress(3,i,1));
+        CPPUNIT_ASSERT_DOUBLES_EQUAL(fExcel, fLibre, fabs(0.00001));
+    }
+}
+
 ScOpenCLTest2::ScOpenCLTest2()
       : ScModelTestBase( "sc/qa/unit/data" )
 {
